package com.iyte.seds519;

import com.iyte.seds519.app.SchedulerApp;

/**
 * Entry point.
 */
public class Main {
    public static void main(String[] args) {
        new SchedulerApp().run();
        System.out.println("\033[33m--------------------------------------------------\033[0m");

    }
}
