package com.iyte.seds519.factory;

public enum ScheduleType {
    UNDERGRADUATE,
    GRADUATE
}
